feat: add hashPassword
