# docs/swagger/swagger.json
@@ -90,6 +90,11 @@
         },
         "/api/v1/login": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Permite a los usuarios autenticarse en la plataforma.",
                 "consumes": [
                     "application/json"
@@ -442,11 +447,18 @@
         },
         "dtos.LoginDto": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
